Fixed a logo display bug on Safari browsers.

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -80,6 +80,7 @@ body
 {
 
 	height: 100%;
+	max-height: 50px;
 
 	grid-column: 1 / 2;
 	grid-row: 1;
